Fix overflow control of toc

--- a/source/css/_partial/post/actions_desktop.styl
+++ b/source/css/_partial/post/actions_desktop.styl
@@ -121,7 +121,7 @@
   #toc
     float: right
     clear: both
-    overflow: auto
+    word-break: break-all;
     margin-top: 1rem
     padding-right: 2rem
     max-width: 20em
